syntax = "proto3";
import "google/protobuf/timestamp.proto";
option go_package = "gen/gen";
package wedding;

enum Gender {
  MALE = 0;
  FEMALE = 1;
  OTHER = 2;
}

message Person {
  string first_name = 1;
  string last_name = 2;
  Gender gender = 3;
}

message Couple {
  Person person_1 = 1;
  Person person_2 = 2;
}

message Wedding {
  string id = 1;
  Couple couple = 2;
  google.protobuf.Timestamp date = 3;
  string location = 4;
  int32 guest_count = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
}

message CreateWeddingRequest{
  Wedding wedding = 1;
}

message CreateWeddingResponse{
  Wedding wedding =1;
}

service WeddingService {
  rpc CreateWedding(CreateWeddingRequest) returns (CreateWeddingResponse) {}
}